discussion/kv_engine/154329/154329_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46517: crash_engine: Stop compiler optimizations from skipping crash

With GCC-10.2 using build type RelWithDebInfo, the compiler is being
too clever and optimizing away the illegal memory access used to
trigger a crash. As a result the test doesn't crash and hangs,
eventually timing out when entire job times out.

Issue seems to be related to it recognising the global dummy value is
only ever accessed from that function, and we don't provide a default
value for it.

Fix by marking the crash function as noinline (to avoid unrolling that
way), and the memory address we dereference volatile.

Also add a timeout to breakpad-test so it doesn't hang forever in
future.

Change-Id: I9d15f63fb9c509cd3ae07e087e0ddf86e9ef7c1b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-05-25 11:13:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-25 11:14:08.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/242018/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-05-25 11:14:35.000000000
Message: 
Patch Set 1:

check approval
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-25 11:14:48.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/242019/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-25 11:28:58.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/21/ : FAILURE

Compile error at ..\kv_engine\engines\crash_engine\crash_engine.cc(64): error C2065: "dummy": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/21/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/19/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/engines/crash_engine/crash_engine.cc:64:12:
error: use of undeclared identifier "dummy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/19/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/9/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/crash_engine/crash_engine.cc:64:12: error: use of undeclared identifier "dummy" [clang-diagnostic-error]
    return dummy++;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/9/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/crash_engine/crash_engine.cc:64:12:
error: use of undeclared identifier "dummy" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/9/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/22/ : FAILURE

Compile error at [2021-05-25T11:26:35.826Z] ../kv_engine/engines/crash_engine/crash_engine.cc:64:12:
error: use of undeclared identifier "dummy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/22/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/22/ : FAILURE

Compile error at [2021-05-25T11:26:29.054Z] ../kv_engine/engines/crash_engine/crash_engine.cc:64:12:
error: ?dummy? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/22/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/22/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/22/ : FAILURE

Compile error at [2021-05-25T11:25:54.900Z] ../kv_engine/engines/crash_engine/crash_engine.cc:64:12:
error: ?dummy? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/22/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/22/ : FAILURE

Compile error at [2021-05-25T11:22:15.118Z] ../kv_engine/engines/crash_engine/crash_engine.cc:64:12:
error: use of undeclared identifier "dummy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/22/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7695/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
